fix deltas from the feedback